# ColdC

./: Features.md  Makefile  Natives.md  ProjectHome.md
genesis/src/: defs.c
genesis/src/include/: config.h.in  decode.h  parse.h
genesis/src/modules/: cdc_misc.c  moddef.h
src/data/: Makefile
src/modules/: Makefile  test.h
test/: coldcc
trunk/genesis/: configure  configure.ac
trunk/genesis/etc/: version
trunk/genesis/src/: CMakeLists.txt  Makefile.in
trunk/genesis/src/include/: defs.h
trunk/src/: binarydb.c
trunk/src/include/: config.h  config.h.in
trunk/src/modules/: mod.conf  modbuild.last  moddef.h  test.c  test.mod
trunk/src/ops/: Makefile
trunk/test/: genesis
wiki/: Features.wiki  Natives.wiki
